# KD_CP

./: CMakeLists.txt  README.md  main.cpp
games/: KDRPKey.txt
shared/: GameCreator.cpp  GameCreator.h  TrueLoadingService.cpp  TrueLoadingService.h  libkd.h  relapse.cpp  relapse.h
userdata/: user_handle.cpp  user_handle.h
